Header: Bug workaround. Navebar was covering content, so i made some changes that will impact the rest of the project.

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -34,10 +34,10 @@ body
   background-color #f5f5f5
 
 .content
-  padding-top 100px
+  padding-top 76px
 
 .page-content
-  padding-top 100px
+  padding-top 76px
 
 .group:after
   content: "";
